# FIRM

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  clang-toolchain.cmake  cpp_ws1.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
Engine/: CMakeLists.txt
Engine/include/engine/: engine.h
Engine/source/: engine.cpp  main.cpp
ExternLib/: CMakeLists.txt
ExternLib/include/: eglobalregistry.h  eobserver.h  eresult.h  eresultvalue.h  esingleton.h  estring.h  filestreamhandle.h  log.h  logger.h  threadmanager.h
ExternLib/include/eglobal/: registry.h  service.h  singleton.h
ExternLib/include/eweb/: httpclient.h
ExternLib/source/: filestreamhandle.cpp  logger.cpp
ExternLib/test/: CMakeLists.txt  testestring.cpp
ExternalLib/: CMakeLists.txt
ExternalLib/include/: eresult.h  estring.h  log.h  logger.h
ExternalLib/source/: filestreamhandle.cpp  logger.cpp
MainApp/: CMakeLists.txt
MainApp/include/: basicstdlib.h
MainApp/source/: main.cpp
app/: CMakeLists.txt  launcher.cpp  launcher.h  main.cpp
app/source/: launcher.cpp  main.cpp
cmake/: dependencies.cmake
cmake/pch/: pch.cmake  pch.h
core/: CMakeLists.txt
core/assemblies/strategies/: CMakeLists.txt
core/assemblies/strategies/base/interface/: idetector.h  iexcutor.h
core/assemblies/strategies/examplestrat/: CMakeLists.txt
core/assemblies/strategies/examplestrat/include/: detector.h
core/assemblies/strategies/examplestrat/source/: detector.cpp
core/assemblies/strategies/interface/: idetector.h
core/assemblies/strategies/scalpingm1/: CMakeLists.txt
core/assemblies/strategies/scalpingm1/include/: detector.h
core/assemblies/strategies/scalpingm1/source/: detector.cpp
core/common/: CMakeLists.txt  candle.h  candles.h  fcpath.h  globalEnum.h
core/engine/: CMakeLists.txt  engine.cpp  engine.h
core/include/: globalEnum.h
core/models/: candle.h
core/modules/: CMakeLists.txt
core/modules/bot/: bot.h  prompt.cpp  prompt.h
core/modules/chatgpt/: client.cpp  client.h  enum.h  parser.cpp  parser.h
core/modules/gui/: candlechartpanel.cpp  candlechartpanel.h  examplePanel.cpp  examplePanel.h  ipanel.h  logPanel.cpp  logPanel.h  manager.cpp  manager.h  panelRegistry.h  panels.cpp  panels.h
core/modules/serialization/: jsonapi.cpp  jsonapi.h  jsonapi.tpp  jsonserializer.h
core/strategies/: CMakeLists.txt
core/strategies/example/: CMakeLists.txt  detector.cpp  detector.h
core/strategies/example/include/: detector.h
core/strategies/examplestrat/: CMakeLists.txt
core/strategies/examplestrat2/: CMakeLists.txt
core/strategies/examplestrat2/include/: detector.h
core/strategies/examplestrat2/source/: detector.cpp
core/strategies/interface/: idetector.h  iexcutor.h
modules/renderer/: CMakeLists.txt
modules/renderer/include/renderer/: Renderer.h
modules/renderer/source/: Renderer.cpp
